# PIX_Clock

./: CMakeLists.txt  README.md  README.zh.md  sdkconfig.old
main/: CMakeLists.txt  main.c
main/lib/ds3231/: ds3231.h  ds3231_driver.c
main/lib/ssd1306/: ssd1306.c  ssd1306.h
main/lib/wifi_provisioning/: wifi_provisioning.c  wifi_provisioning.h
